# flac

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  flac_scu.c  main.c
include/FLAC/: assert.h
src/libFLAC/: metadata_object.c  stream_decoder.c  stream_encoder.c
